--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2571,25 +2571,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import re\n",
     "def text_to_vector(text):\n",
-    "    word=re.compile(r'\\w')"
+    "    word=re.compile(r'\\w')\n",
+    "    words=word.findall(text)\n",
+    "    return Counter(words)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import re"
+    "def get_result(doc_id,content_a,content_b,url,model):\n",
+    "    text1 = content_a\n",
+    "    text2 = content_b\n",
+    "    \n",
+    "    # vector1 = dict{word11:#count, word12:#count, etc.}\n",
+    "    vector1 = text_to_vector(text1)\n",
+    "\n",
+    "    # vector1 = dict{word21:#count, word22:#count, etc.}\n",
+    "    vector2 = text_to_vector(text2)\n",
+    "\n",
+    "    plot_heatmap_image(doc_id, vector1, vector2, url, text2, model)"
    ]
   },
   {
@@ -2597,29 +2610,14 @@
    "execution_count": 62,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "h=re.compile('hello world')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "re.compile(r'hello world', re.UNICODE)"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "h"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2632,51 +2630,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "re.compile(r'hello world', re.UNICODE)"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "h"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "x=re.match(h,'hello  ')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(x)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2687,23 +2653,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['hello', 'world', '!']"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s.split()"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
